fix - close button overlap

--- a/src/components/Form/components/Images.module.scss
+++ b/src/components/Form/components/Images.module.scss
@@ -238,7 +238,7 @@
 
 .message-box {
     background-color: $primaryBackground;
-    padding: 0.6em;
+    padding: 0.6em 1em 0.6em 0.6em;
     border-radius: 0.5em;
 }
 
